# afa-emptiness-checker

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main-afa.cc  main-nfa.cc  main.cc
